--- a/package.json
+++ b/package.json
@@ -4,43 +4,32 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^5.1.2",
-    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
-<<<<<<< HEAD
     "@viro-community/react-viro": "^2.41.1",
-=======
-    "@rnmapbox/maps": "^10.1.38",
->>>>>>> origin/main
     "expo": "~52.0.46",
     "expo-checkbox": "~4.0.1",
-    "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-<<<<<<< HEAD
     "react-native-get-random-values": "~1.11.0",
-=======
->>>>>>> origin/main
     "react-native-image-picker": "^8.2.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-vision-camera": "^4.6.4",
-    "expo-camera": "~16.0.18"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
